--- a/src/layout.cpp.erb
+++ b/src/layout.cpp.erb
@@ -1,23 +1,22 @@
 #include "layout.h"
 #include "settings.h"
 
-PROGMEM const unsigned char FLOOR_MAP[FLOOR_PIXEL_COUNT]  = {
+PROGMEM const byte FLOOR_MAP[STRIP_PIXEL_COUNT]  = {
 <%= all_leds.map(&:floor).map(&:index).join(',') %>
 };
 
-void mapFloorToLinear(byte * pixels) {
-  byte s_led;
-  int s,t;
-  // Start from the end
-  for(int t_led = STRIP_PIXEL_COUNT - 1; t_led>=0; t_led--) {
-    s_led = FLOOR_MAP[t_led-1];
+void mapFloorToLinear(byte * floor, byte * linear) {
+  int f_led;
+  int f,l;
+  for(int l_led = 0; l_led < STRIP_PIXEL_COUNT; l_led++) {
+    f_led = pgm_read_byte(&FLOOR_MAP[l_led]);
 
-    s = 3 * s_led;
-    t = 3 * t_led;
+    f = 3 * f_led;
+    l = 3 * l_led;
 
-    pixels[t + 2] = pixels[s + 2];
-    pixels[t + 1] = pixels[s + 1];
-    pixels[t + 0] = pixels[s + 0];
+    linear[l + 2] = floor[f + 2];
+    linear[l + 1] = floor[f + 1];
+    linear[l + 0] = floor[f + 0];
   }
 }
 
