--- a/lib/Layout/Layout.h.erb
+++ b/lib/Layout/Layout.h.erb
@@ -4,12 +4,12 @@
 #define FLOOR_PIXEL_COUNT <%= floor_tube.led_count %>
 byte floorMap(byte);
 
-enum Orientation {
+enum Orientation : byte {
   ORIENTATION_LINEAR = 0,
   ORIENTATION_FLOOR = 1,
 
 
-  ORIENTATION_NIL = -1
+  ORIENTATION_NIL = 255
 };
 
 #define NUM_ORIENTATIONS 2
